@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          SetOnce attributes now work in superclasses (Karen Etheridge)
 
 0.200001  2011-10-06 19:04:51 America/New_York
           bugfixes for accessors in subclasses (thanks, Karen Etheridge and
